--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,9 +8,9 @@ website:
     right:
       - about.qmd
       - icon: github
-        href: https://github.com/
+        href: https://github.com/ssapre2
       - icon: twitter
-        href: https://twitter.com
+        href: https://twitter.com/sameersapre_9
 format:
   html:
     theme: solar
